# srunsh

./: .gitignore  CMakeLists.txt  README.md  test_local.sh
src/: client.cpp  crypto.cpp  crypto.h  keygen.cpp  protocol.cpp  protocol.h  server.cpp
test/: Dockerfile  docker-compose.yml  entry-compute.sh  entry-controller.sh  run-tests.sh  slurm.conf
